Relayout the version screen on resize and cap labels per row.
OptionsSubScreen only rearranges existing widgets, so widths and columns
now update on resize. Version names use at most five columns, shrinking
when a label would overlap, and the list scrolls vertically when it
cannot fit.

Co-authored-by: JustAlittleWolf <JustAlittleWolf@users.noreply.github.com>