@@ -7,7 +7,7 @@ import net.minecraft.ChatFormatting;
 import net.minecraft.client.Minecraft;
 import net.minecraft.client.gui.Font;
 import net.minecraft.client.gui.GuiGraphicsExtractor;
-import net.minecraft.client.gui.components.AbstractWidget;
+import net.minecraft.client.gui.components.AbstractScrollArea;
 import net.minecraft.client.gui.components.CycleButton;
 import net.minecraft.client.gui.components.EditBox;
 import net.minecraft.client.gui.components.MultiLineTextWidget;
@@ -35,9 +35,11 @@ public class MovementVersionScreen extends OptionsSubScreen {
     private static final Component NONE_AVAILABLE = Component.translatable("legacyparkourcompat.version.available.none");
 
     private boolean wanted = MovementVersions.isWanted();
+    private LinearLayout contents;
     private CycleButton<Boolean> enabledButton;
     private EditBox versionBox;
     private MultiLineTextWidget statusWidget;
+    private VersionLabelsWidget versionLabels;
 
     public MovementVersionScreen(Screen lastScreen) {
         super(lastScreen, Minecraft.getInstance().options, TITLE);
@@ -70,7 +72,12 @@ public class MovementVersionScreen extends OptionsSubScreen {
     }
 
     private int contentWidth() {
-        return Math.clamp(this.width - 40, MIN_CONTENT_WIDTH, MAX_CONTENT_WIDTH);
+        int available = Math.max(20, this.width - 40);
+        return Math.clamp(available, Math.min(MIN_CONTENT_WIDTH, available), MAX_CONTENT_WIDTH);
+    }
+
+    private int listWidth() {
+        return Math.max(this.contentWidth(), Math.max(20, this.width - 20));
     }
 
     @Override
@@ -81,12 +88,12 @@ public class MovementVersionScreen extends OptionsSubScreen {
     protected void addContents() {
         int contentWidth = this.contentWidth();
         int spacing = this.layout.getContentHeight() < 160 ? 4 : 6;
-        LinearLayout contents = this.layout.addToContents(LinearLayout.vertical().spacing(spacing));
-        contents.defaultCellSetting().alignHorizontallyCenter();
+        this.contents = this.layout.addToContents(LinearLayout.vertical().spacing(spacing));
+        this.contents.defaultCellSetting().alignHorizontallyCenter();
 
         this.enabledButton = CycleButton.onOffBuilder(this.wanted)
             .create(0, 0, contentWidth, 20, ENABLED, (button, value) -> this.setWanted(value));
-        contents.addChild(this.enabledButton);
+        this.contents.addChild(this.enabledButton);
 
         LinearLayout field = LinearLayout.vertical().spacing(2);
         field.defaultCellSetting().alignHorizontallyCenter();
@@ -97,33 +104,40 @@ public class MovementVersionScreen extends OptionsSubScreen {
         this.versionBox.setValue(MovementVersions.getInput());
         this.versionBox.setResponder(this::onVersionChanged);
         field.addChild(this.versionBox);
-        contents.addChild(field);
+        this.contents.addChild(field);
 
         this.statusWidget = new MultiLineTextWidget(Component.empty(), this.font)
             .setMaxWidth(contentWidth)
             .setCentered(true);
-        contents.addChild(this.statusWidget);
+        this.contents.addChild(this.statusWidget);
 
         List<ParkourVersion> versions = MovementVersions.listedVersions();
         if (versions.isEmpty()) {
-            contents.addChild(new MultiLineTextWidget(NONE_AVAILABLE, this.font)
+            this.contents.addChild(new MultiLineTextWidget(NONE_AVAILABLE, this.font)
                 .setMaxWidth(contentWidth)
                 .setCentered(true));
+            this.versionLabels = null;
         } else {
-            contents.addChild(new StringWidget(AVAILABLE, this.font));
-            int reservedHeight = 20 + FIELD_HEIGHT + this.font.lineHeight * 4 + spacing * 5;
-            int availableHeight = Math.max(this.font.lineHeight, this.layout.getContentHeight() - reservedHeight);
-            int gridWidth = Math.max(contentWidth, this.width - 20);
-            contents.addChild(new VersionLabelsWidget(
+            this.contents.addChild(new StringWidget(AVAILABLE, this.font));
+            this.versionLabels = new VersionLabelsWidget(
                 this.font,
                 versions.stream().map(ParkourVersion::displayLabel).toList(),
-                gridWidth,
-                availableHeight
-            ));
+                this.listWidth(),
+                this.font.lineHeight
+            );
+            this.contents.addChild(this.versionLabels);
         }
 
         this.refreshInteractiveState();
         this.refreshStatus();
+    }
+
+    @Override
+    protected void repositionElements() {
+        this.applyHorizontalSizes();
+        this.layout.arrangeElements();
+        this.applyVersionListHeight();
+        this.layout.arrangeElements();
     }
 
     @Override
@@ -133,6 +147,31 @@ public class MovementVersionScreen extends OptionsSubScreen {
         } else if (this.enabledButton != null) {
             this.setInitialFocus(this.enabledButton);
         }
+    }
+
+    private void applyHorizontalSizes() {
+        int contentWidth = this.contentWidth();
+        if (this.enabledButton != null) {
+            this.enabledButton.setWidth(contentWidth);
+        }
+        if (this.versionBox != null) {
+            this.versionBox.setWidth(contentWidth);
+        }
+        if (this.statusWidget != null) {
+            this.statusWidget.setMaxWidth(contentWidth);
+        }
+        if (this.versionLabels != null) {
+            this.versionLabels.updateSize(this.listWidth(), this.versionLabels.getHeight());
+        }
+    }
+
+    private void applyVersionListHeight() {
+        if (this.versionLabels == null || this.contents == null) {
+            return;
+        }
+        int usedWithoutList = this.contents.getHeight() - this.versionLabels.getHeight();
+        int listHeight = Math.max(this.font.lineHeight, this.layout.getContentHeight() - usedWithoutList);
+        this.versionLabels.updateSize(this.listWidth(), listHeight);
     }
 
     private void setWanted(boolean wanted) {
@@ -173,49 +212,90 @@ public class MovementVersionScreen extends OptionsSubScreen {
     }
 
     /**
-     * Non-interactive wrapping labels so every listed version stays on screen.
+     * Non-interactive wrapping labels. At most five per row, fewer when the
+     * longest name would overlap, with vertical scrolling when they do not fit.
      */
-    private static final class VersionLabelsWidget extends AbstractWidget {
+    private static final class VersionLabelsWidget extends AbstractScrollArea {
+        private static final int MAX_COLUMNS = 5;
         private static final int COLUMN_GAP = 8;
         private static final int ROW_GAP = 2;
 
         private final Font font;
         private final List<String> labels;
+        private final int maxLabelWidth;
         private final int rowHeight;
-        private int columns;
+        private int columns = 1;
 
-        VersionLabelsWidget(Font font, List<String> labels, int width, int maxHeight) {
-            super(0, 0, width, font.lineHeight, AVAILABLE);
+        VersionLabelsWidget(Font font, List<String> labels, int width, int height) {
+            super(0, 0, width, height, AVAILABLE, defaultSettings(font.lineHeight + ROW_GAP));
             this.font = font;
             this.labels = List.copyOf(labels);
+            int widest = 1;
+            for (String label : this.labels) {
+                widest = Math.max(widest, font.width(label));
+            }
+            this.maxLabelWidth = widest;
             this.rowHeight = font.lineHeight + ROW_GAP;
-            this.active = false;
-            this.relayout(maxHeight);
+            this.relayout();
         }
 
-        private void relayout(int maxHeight) {
-            int maxLabelWidth = 1;
-            for (String label : this.labels) {
-                maxLabelWidth = Math.max(maxLabelWidth, this.font.width(label));
+        void updateSize(int width, int height) {
+            this.setSize(width, height);
+            this.relayout();
+            this.refreshScrollAmount();
+        }
+
+        private void relayout() {
+            this.columns = this.columnsFor(this.width);
+            if (this.contentHeight() > this.getHeight()) {
+                this.columns = this.columnsFor(this.innerWidth(true));
             }
-            int byWidth = Math.max(1, (this.width + COLUMN_GAP) / (maxLabelWidth + COLUMN_GAP));
-            int maxRows = Math.max(1, maxHeight / this.rowHeight);
-            int byHeight = Math.max(1, (this.labels.size() + maxRows - 1) / maxRows);
-            this.columns = Math.min(this.labels.size(), Math.max(byWidth, byHeight));
+        }
+
+        private int innerWidth(boolean withScrollbar) {
+            return Math.max(1, this.width - (withScrollbar ? this.scrollbarWidth() + COLUMN_GAP : 0));
+        }
+
+        private int columnsFor(int innerWidth) {
+            int max = Math.min(MAX_COLUMNS, Math.max(1, this.labels.size()));
+            for (int candidate = max; candidate >= 1; candidate--) {
+                int columnWidth = (innerWidth - COLUMN_GAP * (candidate - 1)) / candidate;
+                if (columnWidth >= this.maxLabelWidth) {
+                    return candidate;
+                }
+            }
+            return 1;
+        }
+
+        @Override
+        protected int contentHeight() {
             int rows = Math.max(1, (this.labels.size() + this.columns - 1) / this.columns);
-            this.setHeight(rows * this.rowHeight - ROW_GAP);
+            return rows * this.rowHeight - ROW_GAP;
         }
 
         @Override
         protected void extractWidgetRenderState(GuiGraphicsExtractor graphics, int mouseX, int mouseY, float a) {
-            int columnWidth = this.columns == 0 ? this.width : this.width / this.columns;
+            this.extractScrollbar(graphics, mouseX, mouseY);
+            int innerWidth = this.innerWidth(this.scrollable());
+            int columnWidth = Math.max(1, innerWidth / this.columns);
+            int scroll = (int) this.scrollAmount();
+            graphics.enableScissor(this.getX(), this.getY(), this.getX() + innerWidth, this.getBottom());
             for (int index = 0; index < this.labels.size(); index++) {
                 int column = index % this.columns;
                 int row = index / this.columns;
                 int x = this.getX() + column * columnWidth;
-                int y = this.getY() + row * this.rowHeight;
+                int y = this.getY() + row * this.rowHeight - scroll;
+                if (y + this.font.lineHeight < this.getY() || y > this.getBottom()) {
+                    continue;
+                }
                 graphics.text(this.font, this.labels.get(index), x, y, 0xFFAAAAAA, true);
             }
+            graphics.disableScissor();
+        }
+
+        @Override
+        public boolean mouseClicked(MouseButtonEvent event, boolean doubleClick) {
+            return this.updateScrolling(event);
         }
 
         @Override
@@ -225,16 +305,6 @@ public class MovementVersionScreen extends OptionsSubScreen {
         @Override
         public NarratableEntry.NarrationPriority narrationPriority() {
             return NarratableEntry.NarrationPriority.NONE;
-        }
-
-        @Override
-        public boolean mouseClicked(MouseButtonEvent event, boolean doubleClick) {
-            return false;
-        }
-
-        @Override
-        public boolean isMouseOver(double mouseX, double mouseY) {
-            return false;
         }
     }
 }
